syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "buf/validate/validate.proto";
import "user/v1/models/user.proto";

message UpdateUserRequest {
  int64 id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gte = 1
  ];
  string email = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.email = true,
    (buf.validate.field).string.min_len = 5,
    (buf.validate.field).string.max_len = 100
  ];
  string username = 3 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 100
  ];
}

message UpdateUserResponse {
  UpdateUser user = 1;
}