syntax = "proto3";

package user.v1;

option go_package = "api/user/v1;userv1";

import "buf/validate/validate.proto";
import "user/v1/enums/user_role.proto";

message UpdateUserRoleRequest {
  int64 id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).int64.gte = 1
  ];
  UserRole role = 2 [
    (buf.validate.field).required = true
  ];
}

message UpdateUserRoleResponse {
  UserRole role = 1;
}